# erd-python

./: #1#input.txt  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
erd/: __init__.py  cli.py  models.py  parser.py  render.py  templates.py
erd_python/: __init__.py  erd.py  parser.py
tests/: __init__.py  test_erd.py  test_models.py  test_parser.py  test_render.py
tests/erds/: one.er
tests/graphs/: simple.dot
